# reconhecimento-led

./: .gitignore  QUICK_START.md  README.md  README_RENDER.md  README_abrir_porta.txt  abrir_porta.bat  abrir_porta.py  acessos.json  app.py  app_render.py  build.sh  cert.pem  deploy_aws.sh  horario_videos.json  install.bat  key.pem  licenca.json  pyproject.toml  render.yaml  render_build_config.txt  render_final.yaml  render_simple.yaml  requirements.txt  requirements_render.txt  requirements_render_minimal.txt  start.sh  volume_config.json
static/: manifest.json  service-worker.js
static/css/: painel.css
static/users/caique.santos@hdt.energy/: profile.json
static/videos/: config.json  playlist.json
static/videos/public/: admin.html  index.html
templates/: admin_master_contato.html  admin_master_login.html  admin_master_painel.html  admin_mode.html  index.html  painel.html  painel_bloqueado.html  painel_led.html  user_mode.html
