[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facial-led-app"
version = "1.1.0"
description = "Sistema de Reconhecimento Facial com Painel LED"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "face-recognition>=1.3.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "cmake>=3.27.0",
    "pyserial>=3.5",
    "requests>=2.31.0",
    "flask-socketio",
    "flask",
    "gunicorn",
    "eventlet"
] 