[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0", "pip>=23.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facial-led-app"
version = "1.1.3"
description = "Sistema de Reconhecimento Facial com Painel LED"
requires-python = ">=3.11,<3.12"
dependencies = [
    "opencv-python-headless",
    "dlib-binary",
    "face-recognition-models",
    "numpy",
    "Pillow",
    "cmake",
    "pyserial",
    "requests",
    "flask-socketio",
    "flask",
    "gunicorn",
    "eventlet"
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"] 