[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facial-led-app"
version = "1.2.1"
description = "Sistema de Reconhecimento Facial com Painel LED (Versão Render)"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-socketio",
    "gunicorn",
    "eventlet",
    "numpy",
    "Pillow",
    "requests",
    "pyserial"
] 